dashboard/src/App.css
* {
  box-sizing: border-box;
}
@font-face {
  font-family: "CocoSharp Trial";
  src: url(../assets/fonts/Coco-Sharp-Regular-trial.ttf);
}
@font-face {
  font-family: "Poppins";
  src: url(../assets/fonts/Poppins-Meduim.ttf);
}

@font-face {
  font-family: "Product Sans";
  src: url(../src/assets/ProductSans-Regular.ttf);
}

body {
  margin: 0;
  font-family: "CocoSharp Trial";
}


/* Navbar section */
.nav{
  display: flex;
  background: #28292B;
  justify-content: space-between;
  padding: 0px 120px;
  align-items: center;
  align-self: stretch;
  height: 112px;
}

.nav-list{
  display: flex;
  align-items: center;
  gap: 40px;
  list-style: none;
  color: #E2E2E2;
  font-size: 18px;
  font-style: normal;
  font-weight: 400;
  line-height: normal;
  margin-top: 11px;
}

.nav-login-button{
  display: flex;
  padding: 8px 24px;
  align-items: center;
  gap: 8px;
  border-radius: 12px;
  background: linear-gradient(113deg, #E4EB78 16.28%, #72CB64 97.76%);
  color: #0C0C0C;
  font-size: 19px;
  font-style: normal;
  font-weight: 700;
  line-height: normal;
}

.body{
  background: radial-gradient(54.5% 54.17% at 51.49% 44.83%, rgba(122, 210, 110, 0.38) 0%, rgba(0, 0, 0, 0.00) 100%), radial-gradient(111.35% 91.29% at -9.29% 16.39%, rgba(141, 211, 179, 0.34) 0%, rgba(0, 0, 0, 0.00) 100%), linear-gradient(229deg, rgba(218, 229, 124, 0.39) -20.55%, rgba(156, 163, 96, 0.39) -20.55%, rgba(40, 41, 43, 0.39) 42.75%), #28292B;
}



/* Greeting section */
.greeting{
  color: #FFF;
  text-align: center;
  font-weight: bold;
  font-size: 45px;
}

/* All the predictions section */
.predictions-card{
  width: 959px; 
  height: 513px; 
  justify-content: flex-start; 
  align-items: center; 
  gap: 22px; 
  display: inline-flex;
}

/* Weather and economy merged sections */
.weather-economic-pred-card{
  width: 448px; 
  height: 513px; 
  padding-top: 10px; 
  flex-direction: column; 
  justify-content: flex-start; 
  align-items: flex-start; 
  gap: 25px; 
  display: inline-flex;
}


/* Rainfall card section */
.rainfall-pred{
  width: 448px; 
  height: 111px; 
  position: relative;
  background-image: url("../src/assets/rainfall.svg");
  background-size: cover;
  border-radius: 37px;
}

.rainfall-bg{
  width: 448px; 
  height: 111px; 
  left: 0px; 
  top: 0px; 
  position: absolute; 
  background: linear-gradient(90deg, rgba(255, 255, 255, 0.28) 0%, rgba(221.85, 225.25, 55.37, 0) 100%); 
  border-radius: 37px;
}

.rainfall-text-cover{
  width: 393px; 
  height: 73px; 
  left: 28.50px; 
  top: 11px; 
  position: absolute;
}

.rainfall-val{
  width: 123px; 
  height: 62px; 
  left: 271px; 
  top: 11px; 
  position: absolute; 
  color: black; 
  font-size: 60px; 
  font-family: Product Sans; 
  font-weight: 700; 
  text-transform: capitalize; 
  word-wrap: break-word;
}

.rainfall-text{
  width: 253.77px; 
  height: 36.18px; 
  left: 4.94px; 
  top: 11.43px; 
  position: absolute;
}

.rainfall-text-span{
  color: #181818; 
  font-size: 25px;  
  font-weight: 700; 
  text-transform: capitalize; 
  word-wrap: break-word;
}

.rainfall-measurement-span{
  color: #181818; 
  font-size: 25px; 
  font-weight: 700; 
  text-transform: lowercase; 
  word-wrap: break-word;
}

.rainfall-extra-span{
  color: #181818; 
  font-size: 25px;  
  font-weight: 700; 
  text-transform: capitalize; 
  word-wrap: break-word;
}



/* Predicting the price section */
.price-predict{
  width: 449px; 
  height: 367px; 
  padding-top: 18px; 
  padding-bottom: 29px; 
  padding-left: 32px; 
  background: #232323; 
  border-radius: 50px; 
  flex-direction: column; 
  justify-content: flex-start; 
  align-items: flex-start; 
  gap: 14px; 
  display: inline-flex;
}

.price-predict-heading{
  width: 429px; 
  height: 102px; 
  padding-top: 9px; 
  padding-left: 6px; 
  border-radius: 50px; 
  flex-direction: column; 
  justify-content: flex-start; 
  align-items: flex-start; 
  gap: 29px; 
  display: inline-flex;
}

.price-predict-heading-text{
  width: 321px; 
  color: white; 
  font-size: 25px;  
  font-weight: 700; 
  text-transform: capitalize; 
  word-wrap: break-word
}

.predict-price-inputs{
  width: 398px; 
  height: 114px; 
  padding-left: 1px; 
  padding-right: 4px; 
  border-radius: 50px; 
  flex-direction: column; 
  justify-content: center; 
  align-items: flex-start; 
  display: inline-flex;
}

.predict-price-inputs-header{
  width: 386px; 
  height: 28px; 
  border-radius: 50px; 
  justify-content: center; 
  align-items: center; 
  gap: 101px; 
  display: inline-flex;
}

.today-price-header{
  width: 149px; 
  height: 22px; 
  color: #ADADAD; 
  font-size: 20px;  
  font-weight: 700; 
  text-transform: capitalize; 
  word-wrap: break-word;
}

.no-of-days-price-header{
  width: 124px; 
  height: 20px; 
  color: #ADADAD; 
  font-size: 20px; 
  font-weight: 700; 
  text-transform: capitalize; 
  word-wrap: break-word;
}

.predict-price-input-boxes{
  width: 386px; 
  height: 74px; 
  border-radius: 50px; 
  justify-content: center; 
  align-items: center; 
  gap: 15px; 
  display: inline-flex;
}

.predict-price-input-boxes-cover{
  width: 240px; 
  height: 54px; 
  position: relative;
}

.predict-price-input-box-lkr-1{
  width: 240px; 
  height: 53.16px; 
  left: 0px; 
  top: 0.84px; 
  position: absolute; 
  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.02) inset; 
  border-radius: 15px; 
  border: 1px #EAEAEA solid;
}

.predict-price-input-box-lkr-2{
  width: 183.26px; 
  height: 36.28px; 
  left: 94px; 
  top: 9.28px; 
  position: absolute;
}

.predict-price-input-box-lkr-val-span{
  color: #ADADAD; 
  font-size: 25px; 
  font-family: Poppins; 
  font-weight: 700; 
  text-transform: capitalize; 
  word-wrap: break-word;
}

.predict-price-input-box-lkr-currency-span{
  color: #ADADAD; 
  font-size: 25px; 
  font-family: Poppins; 
  font-weight: 500; 
  text-transform: capitalize; 
  word-wrap: break-word;
}

.predict-price-input-box-days{
  width: 130px; 
  height: 53px; 
  position: relative
}
/* ... */

